fixed some alignments on searchbar to and from

--- a/js/client/src/sass/components/_geosearch.scss
+++ b/js/client/src/sass/components/_geosearch.scss
@@ -1,8 +1,6 @@
 .geosearch {
   display: flex;
   justify-content: center;
-  grid-row: 1 /2;
-  grid-column: 2/ 3;
   margin: 0 20px;
 }
 
@@ -17,6 +15,12 @@
   border-radius: 4rem;
   width: 100%;
   font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+
+.geoSearchBarComponents{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .geosearch__main-time-select {
